// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MoneyFieldRenderer snapshot (T-0009-059) — expressive×health matches snapshot at expressive×health 1`] = `
<View>
  <Text
    accessibilityElementsHidden={true}
    style={
      {
        "color": "#6B5F56",
        "fontSize": 14,
        "fontWeight": "400",
        "letterSpacing": 0,
        "lineHeight": 20,
        "marginBottom": 4,
      }
    }
  >
    Tip amount
  </Text>
  <View
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#FFFFFF",
        "borderColor": "#EFE9DF",
        "borderRadius": 12,
        "borderWidth": 1,
        "flexDirection": "row",
        "minHeight": 44,
        "paddingHorizontal": 12,
        "paddingVertical": 8,
      }
    }
  >
    <Text
      accessibilityElementsHidden={true}
      style={
        {
          "color": "#6B5F56",
          "fontSize": 16,
          "marginRight": 4,
        }
      }
    >
      $
    </Text>
    <TextInput
      accessibilityLabel="Tip amount, USD"
      accessibilityRole="adjustable"
      accessibilityValue={
        {
          "text": "$12.50",
        }
      }
      keyboardType="decimal-pad"
      onBlur={[Function]}
      onChangeText={[Function]}
      onFocus={[Function]}
      placeholder="0.00"
      placeholderTextColor="#B0A89E"
      style={
        {
          "color": "#1A1715",
          "flex": 1,
          "fontSize": 16,
          "lineHeight": 26,
          "padding": 0,
        }
      }
      testID="moneyfield-input-mf1"
      value="12.50"
    />
  </View>
</View>
`;

exports[`MoneyFieldRenderer snapshot (T-0009-059) — productive×focus matches snapshot at productive×focus 1`] = `
<View>
  <Text
    accessibilityElementsHidden={true}
    style={
      {
        "color": "#5C6470",
        "fontSize": 13,
        "fontWeight": "400",
        "letterSpacing": 0.1,
        "lineHeight": 18,
        "marginBottom": 4,
      }
    }
  >
    Tip amount
  </Text>
  <View
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#FFFFFF",
        "borderColor": "#ECEEF1",
        "borderRadius": 12,
        "borderWidth": 1,
        "flexDirection": "row",
        "minHeight": 44,
        "paddingHorizontal": 12,
        "paddingVertical": 8,
      }
    }
  >
    <Text
      accessibilityElementsHidden={true}
      style={
        {
          "color": "#5C6470",
          "fontSize": 16,
          "marginRight": 4,
        }
      }
    >
      $
    </Text>
    <TextInput
      accessibilityLabel="Tip amount, USD"
      accessibilityRole="adjustable"
      accessibilityValue={
        {
          "text": "$12.50",
        }
      }
      keyboardType="decimal-pad"
      onBlur={[Function]}
      onChangeText={[Function]}
      onFocus={[Function]}
      placeholder="0.00"
      placeholderTextColor="#A2A8B2"
      style={
        {
          "color": "#14171A",
          "flex": 1,
          "fontSize": 16,
          "lineHeight": 24,
          "padding": 0,
        }
      }
      testID="moneyfield-input-mf1"
      value="12.50"
    />
  </View>
</View>
`;
